Auf Mo-Fr begrenzt

--- a/index.htm
+++ b/index.htm
@@ -50,7 +50,7 @@
 		function Kalender(Monat, Jahr) {
 				Monatsname = new Array("Januar", "Februar", "März", "April", "Mai", "Juni",
 					"Juli", "August", "September", "Oktober", "November", "Dezember");
-				Tag = new Array("Mo", "Di", "Mi", "Do", "Fr", "Sa", "So");
+				Tag = new Array("Mo", "Di", "Mi", "Do", "Fr");
 				// aktuelles Datum für die spätere Hervorhebung ermitteln
 				var jetzt = new Date();
 				var DieserMonat = jetzt.getMonth() + 1;
